--- a/docs/docs-ref-autogen/excel/excel.shapecollection.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapecollection.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 3630dc7efda4c42a686053df79b7fc81da9949ab
-ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
+ms.openlocfilehash: f7c626d3fa1568ffc1251822b061802fb76cd9d4
+ms.sourcegitcommit: 788ab9c595c9143f8b8f4822a170e8b90d72ee1d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/27/2019
-ms.locfileid: "30303156"
+ms.lasthandoff: 03/06/2019
+ms.locfileid: "30413831"
 items:
 - uid: excel.Excel.ShapeCollection
   summary: >-
@@ -41,7 +41,7 @@ items:
   - excel.Excel.ShapeCollection.toJSON
 - uid: excel.Excel.ShapeCollection.addGeometricShape
   summary: >-
-    向工作表中添加一个几何形状。 返回一个 Shape 对象，该对象代表新图形。
+    将几何形状添加到工作表。 返回一个 Shape 对象，该对象代表新图形。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -64,7 +64,7 @@ items:
       - excel.Excel.GeometricShapeType
 - uid: excel.Excel.ShapeCollection.addGeometricShape_1
   summary: >-
-    向工作表中添加一个几何形状。 返回一个 Shape 对象，该对象代表新图形。
+    将几何形状添加到工作表。 返回一个 Shape 对象，该对象代表新图形。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -87,7 +87,7 @@ items:
       - "\"LineInverse\" | \"Triangle\" | \"RightTriangle\" | \"Rectangle\" | \"Diamond\" | \"Parallelogram\" | \"Trapezoid\" | \"NonIsoscelesTrapezoid\" | \"Pentagon\" | \"Hexagon\" | \"Heptagon\" | \"Octagon\" | \"Decagon\" | \"Dodecagon\" | \"Star4\" | \"Star5\" | \"Star6\" | \"Star7\" | \"Star8\" | \"Star10\" | \"Star12\" | \"Star16\" | \"Star24\" | \"Star32\" | \"RoundRectangle\" | \"Round1Rectangle\" | \"Round2SameRectangle\" | \"Round2DiagonalRectangle\" | \"SnipRoundRectangle\" | \"Snip1Rectangle\" | \"Snip2SameRectangle\" | \"Snip2DiagonalRectangle\" | \"Plaque\" | \"Ellipse\" | \"Teardrop\" | \"HomePlate\" | \"Chevron\" | \"PieWedge\" | \"Pie\" | \"BlockArc\" | \"Donut\" | \"NoSmoking\" | \"RightArrow\" | \"LeftArrow\" | \"UpArrow\" | \"DownArrow\" | \"StripedRightArrow\" | \"NotchedRightArrow\" | \"BentUpArrow\" | \"LeftRightArrow\" | \"UpDownArrow\" | \"LeftUpArrow\" | \"LeftRightUpArrow\" | \"QuadArrow\" | \"LeftArrowCallout\" | \"RightArrowCallout\" | \"UpArrowCallout\" | \"DownArrowCallout\" | \"LeftRightArrowCallout\" | \"UpDownArrowCallout\" | \"QuadArrowCallout\" | \"BentArrow\" | \"UturnArrow\" | \"CircularArrow\" | \"LeftCircularArrow\" | \"LeftRightCircularArrow\" | \"CurvedRightArrow\" | \"CurvedLeftArrow\" | \"CurvedUpArrow\" | \"CurvedDownArrow\" | \"SwooshArrow\" | \"Cube\" | \"Can\" | \"LightningBolt\" | \"Heart\" | \"Sun\" | \"Moon\" | \"SmileyFace\" | \"IrregularSeal1\" | \"IrregularSeal2\" | \"FoldedCorner\" | \"Bevel\" | \"Frame\" | \"HalfFrame\" | \"Corner\" | \"DiagonalStripe\" | \"Chord\" | \"Arc\" | \"LeftBracket\" | \"RightBracket\" | \"LeftBrace\" | \"RightBrace\" | \"BracketPair\" | \"BracePair\" | \"Callout1\" | \"Callout2\" | \"Callout3\" | \"AccentCallout1\" | \"AccentCallout2\" | \"AccentCallout3\" | \"BorderCallout1\" | \"BorderCallout2\" | \"BorderCallout3\" | \"AccentBorderCallout1\" | \"AccentBorderCallout2\" | \"AccentBorderCallout3\" | \"WedgeRectCallout\" | \"WedgeRRectCallout\" | \"WedgeEllipseCallout\" | \"CloudCallout\" | \"Cloud\" | \"Ribbon\" | \"Ribbon2\" | \"EllipseRibbon\" | \"EllipseRibbon2\" | \"LeftRightRibbon\" | \"VerticalScroll\" | \"HorizontalScroll\" | \"Wave\" | \"DoubleWave\" | \"Plus\" | \"FlowChartProcess\" | \"FlowChartDecision\" | \"FlowChartInputOutput\" | \"FlowChartPredefinedProcess\" | \"FlowChartInternalStorage\" | \"FlowChartDocument\" | \"FlowChartMultidocument\" | \"FlowChartTerminator\" | \"FlowChartPreparation\" | \"FlowChartManualInput\" | \"FlowChartManualOperation\" | \"FlowChartConnector\" | \"FlowChartPunchedCard\" | \"FlowChartPunchedTape\" | \"FlowChartSummingJunction\" | \"FlowChartOr\" | \"FlowChartCollate\" | \"FlowChartSort\" | \"FlowChartExtract\" | \"FlowChartMerge\" | \"FlowChartOfflineStorage\" | \"FlowChartOnlineStorage\" | \"FlowChartMagneticTape\" | \"FlowChartMagneticDisk\" | \"FlowChartMagneticDrum\" | \"FlowChartDisplay\" | \"FlowChartDelay\" | \"FlowChartAlternateProcess\" | \"FlowChartOffpageConnector\" | \"ActionButtonBlank\" | \"ActionButtonHome\" | \"ActionButtonHelp\" | \"ActionButtonInformation\" | \"ActionButtonForwardNext\" | \"ActionButtonBackPrevious\" | \"ActionButtonEnd\" | \"ActionButtonBeginning\" | \"ActionButtonReturn\" | \"ActionButtonDocument\" | \"ActionButtonSound\" | \"ActionButtonMovie\" | \"Gear6\" | \"Gear9\" | \"Funnel\" | \"MathPlus\" | \"MathMinus\" | \"MathMultiply\" | \"MathDivide\" | \"MathEqual\" | \"MathNotEqual\" | \"CornerTabs\" | \"SquareTabs\" | \"PlaqueTabs\" | \"ChartX\" | \"ChartStar\" | \"ChartPlus\""
 - uid: excel.Excel.ShapeCollection.addGroup
   summary: >-
-    将工作表中的一部分形状组合在一起。 返回一个 Shape 对象, 该对象代表新的形状组。
+    在工作表中对形状的子集进行分组。 返回表示新形状组的 Shape 对象。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -110,7 +110,7 @@ items:
       - Array<string | Shape>
 - uid: excel.Excel.ShapeCollection.addImage
   summary: >-
-    从 base64 字符串创建图像, 并将其添加到工作表中。 返回代表新图像的 Shape 对象。
+    从 base64 字符串创建图像并将其添加到工作表。 返回一个 Shape 对象，该对象代表新图像。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -133,7 +133,7 @@ items:
       - string
 - uid: excel.Excel.ShapeCollection.addLine
   summary: >-
-    向工作表中添加行。 返回一个Shape 对象，该对象表示新行。
+    将线条添加到工作表。 返回表示新线条的 Shape 对象。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -148,7 +148,7 @@ items:
     return:
       type:
       - excel.Excel.Shape
-      description: ''
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const shapes = context.workbook.worksheets.getItem(\"Shapes\").shapes;\n    const line = shapes.addLine(200, 50, 300, 150, Excel.ConnectorType.straight);\n    line.name = \"StraightLine\";\n    await context.sync();\n});\n```"
     parameters:
     - id: startLeft
       description: 从行的起始位置到工作表左侧的距离 (以磅为单位)。
@@ -172,7 +172,7 @@ items:
       - excel.Excel.ConnectorType
 - uid: excel.Excel.ShapeCollection.addLine_1
   summary: >-
-    向工作表中添加行。 返回一个Shape 对象，该对象表示新行。
+    将线条添加到工作表。 返回表示新线条的 Shape 对象。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -211,7 +211,7 @@ items:
       - "\"Straight\" | \"Elbow\" | \"Curve\""
 - uid: excel.Excel.ShapeCollection.addSVG
   summary: >-
-    从 XML 字符串创建 SVG 并将其添加到工作表。 返回一个 Shape 对象, 该对象代表新图像。
+    从 XML 字符串创建 SVG 并将其添加到工作表。 返回表示新图像的 Shape 对象。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -234,7 +234,7 @@ items:
       - string
 - uid: excel.Excel.ShapeCollection.addTextBox
   summary: >-
-    通过告诉它的文本内容将 textbox 添加到工作表中。 返回一个 Shape 对象, 该对象代表新的文本框。
+    通过告诉文本内容，将文本框添加到工作表。 返回表示新文本框的 Shape 对象。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -249,7 +249,7 @@ items:
     return:
       type:
       - excel.Excel.Shape
-      description: ''
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const shapes = context.workbook.worksheets.getItem(\"Shapes\").shapes;\n    const textbox = shapes.addTextBox(\"A box with text\");\n    textbox.left = 100;\n    textbox.top = 100;\n    textbox.height = 20;\n    textbox.width = 175;\n    textbox.name = \"Textbox\";\n    await context.sync();\n});\n```"
     parameters:
     - id: text
       description: 表示将在创建的文本框中显示的文本。
@@ -270,7 +270,7 @@ items:
       - RequestContext
 - uid: excel.Excel.ShapeCollection.getCount
   summary: >-
-    返回工作表中的形状的数目。 只读。
+    返回工作表中的形状数。 只读。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -288,7 +288,7 @@ items:
       description: ''
 - uid: excel.Excel.ShapeCollection.getItem
   summary: >-
-    使用其名称获取一个形状。
+    按名称获取形状。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -329,11 +329,11 @@ items:
       description: ''
     parameters:
     - id: index
-      description: 要检索的对象的索引值。从零开始编制索引。
+      description: 要检索的对象的索引值。 从零开始编制索引。
       type:
       - number
 - uid: excel.Excel.ShapeCollection.items
-  summary: 获取此集合中的已加载子项目。
+  summary: 获取此集合中已加载的子项。
   isPreview: true
   name: items
   fullName: items
@@ -346,7 +346,7 @@ items:
       type:
       - Excel.Shape[]
 - uid: excel.Excel.ShapeCollection.load
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性之前, 必须先调用 "context, sync ()"。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
   remarks: >-
     除了此签名之外, 此方法还具有以下签名:
 
@@ -376,7 +376,7 @@ items:
       type:
       - Excel.Interfaces.ShapeCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions
 - uid: excel.Excel.ShapeCollection.load_1
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   isPreview: true
   name: load(propertyNames)
   fullName: load(propertyNames)
