--- a/docs/docs-ref-autogen/excel/excel.textframe.yml
+++ b/docs/docs-ref-autogen/excel/excel.textframe.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 8dbe3e26221352b0032db0c081e1057a7cae834a
-ms.sourcegitcommit: fd03ef72d6a546b0e4dbe0cc9e75d2a7cf9341a1
+ms.openlocfilehash: 98f99dd2efda12602852a9d0bd923512b4e9c640
+ms.sourcegitcommit: 788ab9c595c9143f8b8f4822a170e8b90d72ee1d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/27/2019
-ms.locfileid: "30303030"
+ms.lasthandoff: 03/06/2019
+ms.locfileid: "30413824"
 items:
 - uid: excel.Excel.TextFrame
   summary: >-
@@ -45,7 +45,7 @@ items:
   - excel.Excel.TextFrame.verticalOverflow
 - uid: excel.Excel.TextFrame.autoSize
   summary: >-
-    获取或设置文本框架的自动调整大小设置。 可以将文本框架设置为自动调整文本大小以适合文本框架, 或自动调整文本框架大小以适合文本, 或者不自动调整大小。
+    获取或设置文本框的自动调整大小设置。 可以将文本框设置为自动调整文本大小以适应文本框，或自动调整文本框大小以适应文本，或者不使用自动调整大小设置。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -62,7 +62,7 @@ items:
       - Excel.ShapeAutoSize | "AutoSizeNone" | "AutoSizeTextToFitShape" | "AutoSizeShapeToFitText" | "AutoSizeMixed"
 - uid: excel.Excel.TextFrame.bottomMargin
   summary: >-
-    表示文本框架的下边距 (以磅为单位)。
+    表示文本框的下边距（以磅为单位）。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -92,7 +92,7 @@ items:
       - RequestContext
 - uid: excel.Excel.TextFrame.deleteText
   summary: >-
-    删除 textframe 中的所有文本。
+    删除 TextFrame 中的所有文本。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -107,7 +107,7 @@ items:
     return:
       type:
       - void
-      description: ''
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```typescript\nawait Excel.run(async (context) => {\n    const shapes = context.workbook.worksheets.getItem(\"Shapes\").shapes;\n    const textbox = shapes.getItem(\"Textbox\");\n    textbox.textFrame.deleteText();\n    await context.sync();\n});\n```"
 - uid: excel.Excel.TextFrame.hasText
   summary: >-
     指定 TextFrame 是否包含文本。
@@ -127,7 +127,7 @@ items:
       - boolean
 - uid: excel.Excel.TextFrame.horizontalAlignment
   summary: >-
-    表示文本框架的水平对齐方式。
+    表示文本框的水平对齐方式。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -144,7 +144,7 @@ items:
       - Excel.ShapeTextHorizontalAlignType | "Left" | "Center" | "Right" | "Justify" | "JustifyLow" | "Distributed" | "ThaiDistributed" | "ShapeTextHorizontalAlignType_MaxEnumIDs"
 - uid: excel.Excel.TextFrame.horizontalOverflow
   summary: >-
-    表示文本框架的水平溢出类型。
+    表示文本框的水平溢出类型。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -161,7 +161,7 @@ items:
       - Excel.ShapeTextHorzOverflowType | "Overflow" | "Clip" | "ShapeTextHorzOverflowType_MaxEnumIDs"
 - uid: excel.Excel.TextFrame.leftMargin
   summary: >-
-    表示文本框架的左边距 (以磅为单位)。
+    表示文本框的左边距（以磅为单位）。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -177,7 +177,7 @@ items:
       type:
       - number
 - uid: excel.Excel.TextFrame.load
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性之前, 必须先调用 "context, sync ()"。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
   remarks: >-
     除了此签名之外, 此方法还具有以下签名:
 
@@ -207,7 +207,7 @@ items:
       type:
       - excel.Excel.Interfaces.TextFrameLoadOptions
 - uid: excel.Excel.TextFrame.load_1
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   isPreview: true
   name: load(propertyNames)
   fullName: load(propertyNames)
@@ -226,7 +226,7 @@ items:
       type:
       - string | string[]
 - uid: excel.Excel.TextFrame.load_2
-  summary: 对命令进行排队, 以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
+  summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。
   isPreview: true
   name: load(propertyNamesAndPaths)
   fullName: load(propertyNamesAndPaths)
@@ -246,7 +246,7 @@ items:
       - '{ select?: string; expand?: string; }'
 - uid: excel.Excel.TextFrame.orientation
   summary: >-
-    表示文本框架的文本方向。
+    表示文本框的文本方向。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -263,7 +263,7 @@ items:
       - Excel.ShapeTextOrientationType | "Horizontal" | "Vertical" | "Vertical270" | "WordArtVertical" | "EastAsianVertical" | "MongolianVertical" | "WordArtVerticalRTL" | "ShapeTextOrientationType_MaxEnumIDs"
 - uid: excel.Excel.TextFrame.readingOrder
   summary: >-
-    表示文本框架的阅读顺序: RTL 或 LTR。
+    表示文本框、RTL 或 LTR 的读取顺序。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -280,7 +280,7 @@ items:
       - Excel.ShapeTextReadingOrder | "LTR" | "RTL"
 - uid: excel.Excel.TextFrame.rightMargin
   summary: >-
-    表示文本框架的右边距 (以磅为单位)。
+    表示文本框的右边距（以磅为单位）。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -375,7 +375,7 @@ items:
       description: ''
 - uid: excel.Excel.TextFrame.topMargin
   summary: >-
-    代表文本框架的上边距 (以磅为单位)。
+    表示文本框的上边距（以磅为单位）。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -392,7 +392,7 @@ items:
       - number
 - uid: excel.Excel.TextFrame.verticalAlignment
   summary: >-
-    表示文本框架的垂直对齐方式。
+    表示文本框的垂直对齐方式。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -409,7 +409,7 @@ items:
       - Excel.ShapeTextVerticalAlignType | "Top" | "Middle" | "Bottom" | "Justified" | "Distributed" | "ShapeTextVerticalAlignType_MaxEnumIDs"
 - uid: excel.Excel.TextFrame.verticalOverflow
   summary: >-
-    表示文本框架的垂直溢出类型。
+    表示文本框的垂直溢出类型。
 
 
     \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
