--- a/docs/docs-ref-autogen/outlook/office.attachmentdetails.yml
+++ b/docs/docs-ref-autogen/outlook/office.attachmentdetails.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2ceaf26160eaef6116553f85a036b0789f4ad7b3
-ms.sourcegitcommit: b0b614f5315ab2e5c1e0ea51c687498f87684a07
+ms.openlocfilehash: 938165fd3826696d9ee6b8af5203c5ad13935c50
+ms.sourcegitcommit: 788ab9c595c9143f8b8f4822a170e8b90d72ee1d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/15/2019
-ms.locfileid: "30056051"
+ms.lasthandoff: 03/06/2019
+ms.locfileid: "30413768"
 items:
 - uid: outlook.Office.AttachmentDetails
   summary: >-
-    表示服务器中一个项目上的附件。仅限阅读模式。
+    表示服务器中一个项目上的附件。 仅限阅读模式。
 
 
     **AttachmentDetails**对象的数组作为约会或邮件项目的附件属性返回。
@@ -62,6 +62,7 @@ items:
   - outlook.Office.AttachmentDetails.isInline
   - outlook.Office.AttachmentDetails.name
   - outlook.Office.AttachmentDetails.size
+  - outlook.Office.AttachmentDetails.url
 - uid: outlook.Office.AttachmentDetails.attachmentType
   summary: 获取一个指示附件类型的值。
   name: attachmentType
@@ -134,3 +135,19 @@ items:
     return:
       type:
       - number
+- uid: outlook.Office.AttachmentDetails.url
+  summary: >-
+    如果附件的类型为`MailboxEnums.AttachmentType.Cloud` <!-- -->, 则获取附件的 url。
+
+
+    \[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+  name: url
+  fullName: url
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'url: string;'
+    return:
+      type:
+      - string
