--- a/docs/docs-ref-autogen/office/office.addincommands.event.yml
+++ b/docs/docs-ref-autogen/office/office.addincommands.event.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 708200260af7682cd194186f3048a84ac72b1320
-ms.sourcegitcommit: b0b614f5315ab2e5c1e0ea51c687498f87684a07
+ms.openlocfilehash: 0c8141e8e329358eace529ea10f42308605b0d8b
+ms.sourcegitcommit: 788ab9c595c9143f8b8f4822a170e8b90d72ee1d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/15/2019
-ms.locfileid: "30055753"
+ms.lasthandoff: 03/06/2019
+ms.locfileid: "30413838"
 items:
 - uid: office.Office.AddinCommands.Event
-  summary: event 对象作为参数传递到由无用户界面命令按钮调用的外接程序函数。该对象允许外接程序确定单击了哪个按钮，并向主机发出信号说明已完成处理。
+  summary: 事件对象作为参数传递给由无 UI 调用的外接程序函数 (不小于命令按钮)。 该对象允许外接程序确定单击了哪个按钮，并向主机发出信号说明已完成处理。
   remarks: <table> <tr><td>外接程序类型</td><td>内容、任务窗格、Outlook</td></tr> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>受限</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr> </table>
   name: Office.AddinCommands.Event
   fullName: Office.AddinCommands.Event
@@ -23,7 +23,7 @@ items:
     指示外接程序已完成由外接程序命令按钮或事件处理程序触发的处理。
 
 
-    此方法必须在由使用 xsi:type 属性设置为 ExecuteFunction 的 Action 元素定义的外接程序命令调用的函数的末尾调用。调用此方法会向主机客户端发出信号，指示函数已完成并且它可以清理调用该函数所涉及的任何状态。例如，如果用户在调用此方法之前关闭 Outlook，Outlook 将警告函数仍在执行。
+    此方法必须在由外接程序命令 (由 xsi: type 属性设置为 ExecuteFunction 的 Action 元素定义) 调用的函数末尾调用。 调用此方法会向主机客户端发出信号，指示函数已完成并且它可以清理调用该函数所涉及的任何状态。 例如，如果用户在调用此方法之前关闭 Outlook，Outlook 将警告函数仍在执行。
 
 
     事件处理完成后，必须在由 Office.context.mailbox.addHandlerAsync 添加的事件处理程序中调用此方法。
@@ -43,7 +43,7 @@ items:
     有关 office 主机应用程序和服务器要求的详细信息, 请参阅[运行 office 外接](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->程序的要求。
 
 
-    *支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th><th> Office Online（在浏览器中） </th><th> Office for iPad </th></tr> <tr><td><strong>Excel</strong></td><td> Y </td><td> Y </td><td> Y </td></tr> <tr><td><strong>Outlook</strong></td><td> Y (邮箱 1.3) </td><td> </td><td> </td></tr> <tr><td><strong>PowerPoint</strong></td><td> Y </td><td> Y </td><td> Y </td></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> Y </td><td> Y </td></tr> </table>
+    *支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th><th> Office Online（在浏览器中） </th><th> Office for iPad </th></tr> <tr><td><strong>Excel</strong></td><td> Y </td><td> Y </td><td> Y </td></tr> <tr><td><strong>Outlook</strong></td><td> Y (邮箱 1.3: 不带选项<br>邮箱预览: 使用选项)</td><td> </td><td> </td></tr> <tr><td><strong>PowerPoint</strong></td><td> Y </td><td> Y </td><td> Y </td></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> Y </td><td> Y </td></tr> </table>
 
     #### <a name="examples"></a>示例
 
@@ -85,7 +85,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'completed(options?: any): void;'
+    content: 'completed(options?: { allowEvent: boolean }): void;'
     return:
       type:
       - void
@@ -94,7 +94,7 @@ items:
     - id: options
       description: '可选。 包含一个或多个以下属性的对象文本。 allowEvent: 布尔值。 当使用完成的方法来使事件处理程序的完成信号时, 此值指示已处理事件应继续执行或被取消。 例如, 处理 ItemSend 事件的外接程序可以设置 allowEvent = false 以取消发送邮件。'
       type:
-      - any
+      - '{ allowEvent: boolean }'
 - uid: office.Office.AddinCommands.Event.source
   summary: >-
     有关触发调用此函数的控件的信息。
