--- a/docs/docs-ref-autogen/office/office.officetheme.yml
+++ b/docs/docs-ref-autogen/office/office.officetheme.yml
@@ -1,28 +1,28 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 871b05194a2f98c8504ae3f2b65fc126756a767c
-ms.sourcegitcommit: 31847d2ea6be78b8f473dfbfb0a575fdecd877be
+ms.openlocfilehash: 6f99eae7abf480ae6e44e64baba3d34792f8e71d
+ms.sourcegitcommit: 788ab9c595c9143f8b8f4822a170e8b90d72ee1d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/13/2018
-ms.locfileid: "26297689"
+ms.lasthandoff: 03/06/2019
+ms.locfileid: "30413817"
 items:
 - uid: office.Office.OfficeTheme
   summary: >-
     提供了访问 Office 主题颜色的属性。
 
 
-    使用 Office 主题颜色，可以与用户选择的文件当前 Office 主题协调配色方案加载项的&gt;Office 帐户&gt;应用跨所有 Office 主机应用程序的 Office 主题 UI。 使用 Office 主题颜色适用于邮件和任务窗格外接程序。
+    使用 Office 主题颜色, 可以将加载项的配色方案与用户选择的当前 office 主题进行协调, 该主题是在&gt;所有 office &gt;主机应用程序中应用的文件 office 帐户 Office 主题 UI。 使用 Office 主题颜色适用于邮件和任务窗格外接程序。
   remarks: >-
     **支持详细信息**
 
 
-    在以下矩阵大写 Y 指示在相应的 Office 主机应用程序支持这些属性。 空单元格指示 Office 主机应用程序不支持此枚举。
+    下表中的大写 Y 表示相应的 Office 主机应用程序支持这些属性。 空的单元格表示相应的 Office 主机应用程序不支持此枚举。
 
 
-    有关 Office 主机应用程序和服务器要求的详细信息，请参阅[Requirements for Office 加载项运行](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->。
+    有关 office 主机应用程序和服务器要求的详细信息, 请参阅[运行 office 外接](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->程序的要求。
 
 
-    *支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th></tr> <tr><td><strong>Excel</strong></td><td> Y </td></tr> <tr><td><strong>Outlook</strong></td><td> （preview) 中的 Y </td></tr> <tr><td><strong>PowerPoint</strong></td><td> Y </td></tr> <tr><td><strong>Word</strong></td><td> Y </td></tr> </table>
+    *支持的主机（按平台）* <table> <tr><th> </th><th> Office for Windows Desktop </th></tr> <tr><td><strong>Excel</strong></td><td> Y </td></tr> <tr><td><strong>Outlook</strong></td><td> Y (在预览中) </td></tr> <tr><td><strong>PowerPoint</strong></td><td> Y </td></tr> <tr><td><strong>Word</strong></td><td> Y </td></tr> </table>
 
     #### <a name="examples"></a>示例
 
@@ -53,7 +53,7 @@ items:
   - office.Office.OfficeTheme.controlBackgroundColor
   - office.Office.OfficeTheme.controlForegroundColor
 - uid: office.Office.OfficeTheme.bodyBackgroundColor
-  summary: 获取作为十六进制颜色占据 (例如"FFA500") 的 Office 主题正文背景颜色。
+  summary: 以十六进制颜色 (例如 "FFA500") 获取 Office 主题正文的背景色。
   name: bodyBackgroundColor
   fullName: bodyBackgroundColor
   langs:
@@ -65,7 +65,7 @@ items:
       type:
       - string
 - uid: office.Office.OfficeTheme.bodyForegroundColor
-  summary: 获取作为十六进制颜色占据 (例如"FFA500") 的 Office 主题正文前景颜色。
+  summary: 获取 Office 主题正文前景色作为三元的十六进制颜色 (例如, "FFA500")。
   name: bodyForegroundColor
   fullName: bodyForegroundColor
   langs:
@@ -77,7 +77,7 @@ items:
       type:
       - string
 - uid: office.Office.OfficeTheme.controlBackgroundColor
-  summary: 获取作为十六进制颜色占据 (例如"FFA500") 的 Office 主题控件背景颜色。
+  summary: 获取 Office 主题控件的背景色作为三元的十六进制颜色 (例如, "FFA500")。
   name: controlBackgroundColor
   fullName: controlBackgroundColor
   langs:
@@ -89,7 +89,7 @@ items:
       type:
       - string
 - uid: office.Office.OfficeTheme.controlForegroundColor
-  summary: 获取 Office 主题正文控件颜色作为十六进制颜色占据 (例如"FFA500")。
+  summary: 获取 Office 主题控件的前景色作为三元的十六进制颜色 (例如, "FFA500")。
   name: controlForegroundColor
   fullName: controlForegroundColor
   langs:
