--- a/docs/docs-ref-autogen/outlook/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook/office.appointmentcompose.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 0d5f7ffe5e6b3ba5839c6cb35251dab788b20170
-ms.sourcegitcommit: 5c1011d5e46e007fd1f7f620d4dff74356dcd029
+ms.openlocfilehash: a0ba770d2ed3a60b265638b1560897b51a2c939b
+ms.sourcegitcommit: 788ab9c595c9143f8b8f4822a170e8b90d72ee1d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 03/01/2019
-ms.locfileid: "30359063"
+ms.lasthandoff: 03/06/2019
+ms.locfileid: "30413908"
 items:
 - uid: outlook.Office.AppointmentCompose
   summary: "\" [context.subname](xref:outlook.Office.Item)<!-- -->\" 的约会组织者模式。\n\n**重要说明**: 这是一个内部 Outlook 对象, 而不是直接通过现有接口公开。 应将其视为 \"context.subname\" 模式。 有关详细信息, 请参阅[对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/preview-requirement-set/office.context.mailbox.item)页。"
@@ -60,10 +60,10 @@ items:
     将文件作为附件添加到邮件或约会。
 
 
-    addFileAttachmentAsync 方法在指定的 URI 上载文件并将其附加到撰写窗体中的项目。
+    addFileAttachmentAsync 方法在指定的 URI 处上载文件, 并将其附加到撰写窗体中的项目。
 
 
-    您随后可以将该标识符与 removeAttachmentAsync 方法一同使用，以删除同一个会话中的附件。
+    随后可以将该标识符与 removeAttachmentAsync 方法一起使用, 以删除同一个会话中的附件。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -106,11 +106,11 @@ items:
       description: ''
     parameters:
     - id: uri
-      description: 提供附加到邮件或约会的文件的位置的 URI。最大长度为 2048 个字符。
+      description: 提供附加到邮件或约会的文件的位置的 URI。 最大长度为 2048 个字符。
       type:
       - string
     - id: attachmentName
-      description: 在附件上载过程中显示的附件名称。最大长度为 255 个字符。
+      description: 在附件上载过程中显示的附件名称。 最大长度为 255 个字符。
       type:
       - string
     - id: options
@@ -118,7 +118,7 @@ items:
       type:
       - 'Office.AsyncContextOptions & { isInline: boolean }'
     - id: callback
-      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功后, 将在 asyncResult 属性中提供附件标识符。 如果上传附件失败，asyncResult 对象将包含一个 Error 对象，提供错误描述。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功后, 将在 asyncResult 属性中提供附件标识符。 如果上传附件失败, asyncResult 对象将包含一个 error 对象, 该对象提供错误说明。
       type:
       - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: outlook.Office.AppointmentCompose.addFileAttachmentAsync_1
@@ -126,10 +126,10 @@ items:
     将文件作为附件添加到邮件或约会。
 
 
-    addFileAttachmentAsync 方法在指定的 URI 上载文件并将其附加到撰写窗体中的项目。
+    addFileAttachmentAsync 方法在指定的 URI 处上载文件, 并将其附加到撰写窗体中的项目。
 
 
-    您随后可以将该标识符与 removeAttachmentAsync 方法一同使用，以删除同一个会话中的附件。
+    随后可以将该标识符与 removeAttachmentAsync 方法一起使用, 以删除同一个会话中的附件。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -147,15 +147,15 @@ items:
       description: ''
     parameters:
     - id: uri
-      description: 提供附加到邮件或约会的文件的位置的 URI。最大长度为 2048 个字符。
+      description: 提供附加到邮件或约会的文件的位置的 URI。 最大长度为 2048 个字符。
       type:
       - string
     - id: attachmentName
-      description: 在附件上载过程中显示的附件名称。最大长度为 255 个字符。
+      description: 在附件上载过程中显示的附件名称。 最大长度为 255 个字符。
       type:
       - string
     - id: callback
-      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功后, 将在 asyncResult 属性中提供附件标识符。 如果上传附件失败，asyncResult 对象将包含一个 Error 对象，提供错误描述。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功后, 将在 asyncResult 属性中提供附件标识符。 如果上传附件失败, asyncResult 对象将包含一个 error 对象, 该对象提供错误说明。
       type:
       - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: outlook.Office.AppointmentCompose.addFileAttachmentFromBase64Async
@@ -166,7 +166,7 @@ items:
     addFileAttachmentFromBase64Async 方法从 base64 编码上载文件, 并将其附加到撰写窗体中的项目。 此方法返回 asyncResult 对象中的附件标识符。
 
 
-    您随后可以将该标识符与 removeAttachmentAsync 方法一同使用，以删除同一个会话中的附件。
+    随后可以将该标识符与 removeAttachmentAsync 方法一起使用, 以删除同一个会话中的附件。
 
 
     \[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -212,7 +212,7 @@ items:
       type:
       - string
     - id: attachmentName
-      description: 在附件上载过程中显示的附件名称。最大长度为 255 个字符。
+      description: 在附件上载过程中显示的附件名称。 最大长度为 255 个字符。
       type:
       - string
     - id: options
@@ -220,7 +220,7 @@ items:
       type:
       - 'Office.AsyncContextOptions &  { isInline: boolean }'
     - id: callback
-      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功后, 将在 asyncResult 属性中提供附件标识符。 如果上传附件失败，asyncResult 对象将包含一个 Error 对象，提供错误描述。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功后, 将在 asyncResult 属性中提供附件标识符。 如果上传附件失败, asyncResult 对象将包含一个 error 对象, 该对象提供错误说明。
       type:
       - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: outlook.Office.AppointmentCompose.addFileAttachmentFromBase64Async_1
@@ -231,7 +231,7 @@ items:
     addFileAttachmentFromBase64Async 方法从 base64 编码上载文件, 并将其附加到撰写窗体中的项目。 此方法返回 asyncResult 对象中的附件标识符。
 
 
-    您随后可以将该标识符与 removeAttachmentAsync 方法一同使用，以删除同一个会话中的附件。
+    随后可以将该标识符与 removeAttachmentAsync 方法一起使用, 以删除同一个会话中的附件。
 
 
     \[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -254,11 +254,11 @@ items:
       type:
       - string
     - id: attachmentName
-      description: 在附件上载过程中显示的附件名称。最大长度为 255 个字符。
+      description: 在附件上载过程中显示的附件名称。 最大长度为 255 个字符。
       type:
       - string
     - id: callback
-      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功后, 将在 asyncResult 属性中提供附件标识符。 如果上传附件失败，asyncResult 对象将包含一个 Error 对象，提供错误描述。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 成功后, 将在 asyncResult 属性中提供附件标识符。 如果上传附件失败, asyncResult 对象将包含一个 error 对象, 该对象提供错误说明。
       type:
       - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: outlook.Office.AppointmentCompose.addHandlerAsync
@@ -277,7 +277,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'addHandlerAsync(eventType: Office.EventType, handler: any, options?: any, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
+    content: 'addHandlerAsync(eventType: Office.EventType, handler: any, options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
@@ -288,13 +288,13 @@ items:
       type:
       - Office.EventType
     - id: handler
-      description: 处理事件的函数。 函数必须接受单个参数, 该参数是对象文本。 参数的 type 属性将与传递给 addHandlerAsync 的事件类型参数相匹配。
+      description: 用于处理事件的函数。 此函数必须接受一个参数，即对象文本。 参数的 type 属性将与传递给 addHandlerAsync 的事件类型参数相匹配。
       type:
       - any
     - id: options
       description: '可选。 包含一个或多个以下属性的对象文本。 asyncContext: 开发人员可以在回调方法中提供要访问的任何对象。'
       type:
-      - any
+      - Office.AsyncContextOptions
     - id: callback
       description: 可选。 方法完成后, 使用单个参数 asyncResult 调用在 callback 参数中传递的函数, 该参数是一个作为一个 asyncresult 对象的参数。
       type:
@@ -326,7 +326,7 @@ items:
       type:
       - Office.EventType
     - id: handler
-      description: 处理事件的函数。 函数必须接受单个参数, 该参数是对象文本。 参数的 type 属性将与传递给 addHandlerAsync 的事件类型参数相匹配。
+      description: 用于处理事件的函数。 此函数必须接受一个参数，即对象文本。 参数的 type 属性将与传递给 addHandlerAsync 的事件类型参数相匹配。
       type:
       - any
     - id: callback
@@ -338,13 +338,13 @@ items:
     将 Exchange 项目（如邮件）作为附件添加到邮件或约会。
 
 
-    addItemAttachmentAsync 方法将包含指定 Exchange 标识符的项目附加到撰写窗体中的项目。如果您指定一个回调方法，此方法使用一个 asyncResult 参数调用，该参数包含一个附件标识符或代码，指示附加项目过程中出现的任何错误。您可以使用 options 参数将状态信息传递给回调方法（如果需要）。
+    addItemAttachmentAsync 方法将具有指定 Exchange 标识符的项目附加到撰写窗体中的项目。 如果指定了回调方法, 则使用一个参数 asyncResult 调用方法, 该参数包含附件标识符或指示附加项目时出现的任何错误的代码。 如果需要, 可以使用 options 参数将状态信息传递给回调方法。
 
 
-    您随后可以将该标识符与 removeAttachmentAsync 方法一同使用，以删除同一个会话中的附件。
+    随后可以将该标识符与 removeAttachmentAsync 方法一起使用, 以删除同一个会话中的附件。
 
 
-    如果 Office 外接程序在 Outlook Web App 中运行，则 addItemAttachmentAsync 方法可以将项目添加到项目（正在编辑的项目除外）中；然而，不支持也不建议这样做。
+    如果你的 Office 外接程序在 Outlook Web App 中运行, 则 addItemAttachmentAsync 方法可以将项目附加到您正在编辑的项目之外的项目中;但是, 不支持这种情况, 建议不要这样做。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -393,11 +393,11 @@ items:
       description: ''
     parameters:
     - id: itemId
-      description: 要附加的项目的 Exchange 标识符。最大长度为 100 个字符。
+      description: 要附加的项目的 Exchange 标识符。 最大长度为 100 个字符。
       type:
       - any
     - id: attachmentName
-      description: 在附件上载过程中显示的附件名称。最大长度为 255 个字符。
+      description: 在附件上载过程中显示的附件名称。 最大长度为 255 个字符。
       type:
       - string
     - id: options
@@ -413,13 +413,13 @@ items:
     将 Exchange 项目（如邮件）作为附件添加到邮件或约会。
 
 
-    addItemAttachmentAsync 方法将包含指定 Exchange 标识符的项目附加到撰写窗体中的项目。如果您指定一个回调方法，此方法使用一个 asyncResult 参数调用，该参数包含一个附件标识符或代码，指示附加项目过程中出现的任何错误。您可以使用 options 参数将状态信息传递给回调方法（如果需要）。
+    addItemAttachmentAsync 方法将具有指定 Exchange 标识符的项目附加到撰写窗体中的项目。 如果指定了回调方法, 则使用一个参数 asyncResult 调用方法, 该参数包含附件标识符或指示附加项目时出现的任何错误的代码。 如果需要, 可以使用 options 参数将状态信息传递给回调方法。
 
 
-    您随后可以将该标识符与 removeAttachmentAsync 方法一同使用，以删除同一个会话中的附件。
+    随后可以将该标识符与 removeAttachmentAsync 方法一起使用, 以删除同一个会话中的附件。
 
 
-    如果 Office 外接程序在 Outlook Web App 中运行，则 addItemAttachmentAsync 方法可以将项目添加到项目（正在编辑的项目除外）中；然而，不支持也不建议这样做。
+    如果你的 Office 外接程序在 Outlook Web App 中运行, 则 addItemAttachmentAsync 方法可以将项目附加到您正在编辑的项目之外的项目中;但是, 不支持这种情况, 建议不要这样做。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -437,11 +437,11 @@ items:
       description: ''
     parameters:
     - id: itemId
-      description: 要附加的项目的 Exchange 标识符。最大长度为 100 个字符。
+      description: 要附加的项目的 Exchange 标识符。 最大长度为 100 个字符。
       type:
       - any
     - id: attachmentName
-      description: 在附件上载过程中显示的附件名称。最大长度为 255 个字符。
+      description: 在附件上载过程中显示的附件名称。 最大长度为 255 个字符。
       type:
       - string
     - id: callback
@@ -456,7 +456,7 @@ items:
     close 方法的行为取决于正在撰写的项目的当前状态。 如果项目具有未保存的更改, 则客户端将提示用户保存、放弃或关闭该操作。
 
 
-    在 Outlook 桌面客户端中，如果邮件是内联答复，close 方法不起作用。
+    在 Outlook 桌面客户端中, 如果邮件是内嵌答复, 则 close 方法将不起作用。
 
 
     **注意**: 在 web 上的 Outlook 中, 如果该项目是一个约会, 并且以前使用 saveAsync 保存过, 则系统会提示用户保存、放弃或取消操作, 即使自上次保存项目后未发生更改也是如此。
@@ -477,7 +477,7 @@ items:
       description: ''
 - uid: outlook.Office.AppointmentCompose.getAttachmentsAsync
   summary: >-
-    获取项目的附件作为数组。
+    以数组的形式获取项目的附件。
 
 
     \[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -505,7 +505,7 @@ items:
       - '(asyncResult: Office.AsyncResult<AttachmentDetails[]>) => void'
 - uid: outlook.Office.AppointmentCompose.getAttachmentsAsync_1
   summary: >-
-    获取项目的附件作为数组。
+    以数组的形式获取项目的附件。
 
 
     \[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -559,7 +559,7 @@ items:
       - '(asyncResult: Office.AsyncResult<AttachmentDetails[]>) => void'
 - uid: outlook.Office.AppointmentCompose.getInitializationContextAsync
   summary: >-
-    当可操作邮件激活加载项时，获取传递的初始化数据。
+    获取通过可操作邮件激活加载项时传递的初始化数据。
 
 
     **注意**: 仅 outlook 2016 for Windows (大于16.0.8413.1000 的即点即用版本) 和适用于 Office 365 的 outlook 网页版支持此方法。
@@ -594,7 +594,7 @@ items:
       - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: outlook.Office.AppointmentCompose.getInitializationContextAsync_1
   summary: >-
-    当可操作邮件激活加载项时，获取传递的初始化数据。
+    获取通过可操作邮件激活加载项时传递的初始化数据。
 
 
     **注意**: 仅 outlook 2016 for Windows (大于16.0.8413.1000 的即点即用版本) 和适用于 Office 365 的 outlook 网页版支持此方法。
@@ -628,10 +628,10 @@ items:
     以异步方式返回邮件的主题或正文中选定的数据。
 
 
-    如果没有选定内容，但光标位于正文或主题中，此方法将会为所选数据返回 null。如果选定的是字段，而不是正文或主题，则此方法返回 InvalidSelection 错误。
+    如果没有选定内容，但光标位于正文或主题中，此方法将会为所选数据返回 null。 如果选择了 "正文" 或 "主题" 以外的字段, 则该方法将返回 InvalidSelection 错误。
 
 
-    若要从回调方法访问所选数据，请调用 asyncResult.value.data。若要访问选定内容的源属性，请调用 asyncResult.value.sourceProperty，这将为 body 或 subject。
+    若要从回调方法访问所选数据, 请调用 asyncResult. value。 若要访问所选内容来自的源属性, 请调用 asyncResult. sourceProperty, 它是正文或主题。
 
 
     \[[API 集: 邮箱 1.2](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -673,7 +673,7 @@ items:
     return:
       type:
       - void
-      description: 作为字符串的所选数据的格式由 coercionType 确定。
+      description: 所选数据的格式为 coercionType 所确定的格式的字符串。
     parameters:
     - id: coercionType
       description: 请求数据的格式。如果为文本，则此方法返回纯文本作为字符串，删除任何显示的 HTML 标记。如果为 HTML，则此方法返回所选文本，不论是纯文本还是 HTML。
@@ -692,10 +692,10 @@ items:
     以异步方式返回邮件的主题或正文中选定的数据。
 
 
-    如果没有选定内容，但光标位于正文或主题中，此方法将会为所选数据返回 null。如果选定的是字段，而不是正文或主题，则此方法返回 InvalidSelection 错误。
+    如果没有选定内容，但光标位于正文或主题中，此方法将会为所选数据返回 null。 如果选择了 "正文" 或 "主题" 以外的字段, 则该方法将返回 InvalidSelection 错误。
 
 
-    若要从回调方法访问所选数据，请调用 asyncResult.value.data。若要访问选定内容的源属性，请调用 asyncResult.value.sourceProperty，这将为 body 或 subject。
+    若要从回调方法访问所选数据, 请调用 asyncResult. value。 若要访问所选内容来自的源属性, 请调用 asyncResult. sourceProperty, 它是正文或主题。
 
 
     \[[API 集: 邮箱 1.2](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -710,7 +710,7 @@ items:
     return:
       type:
       - void
-      description: 作为字符串的所选数据的格式由 coercionType 确定。
+      description: 所选数据的格式为 coercionType 所确定的格式的字符串。
     parameters:
     - id: coercionType
       description: 请求数据的格式。如果为文本，则此方法返回纯文本作为字符串，删除任何显示的 HTML 标记。如果为 HTML，则此方法返回所选文本，不论是纯文本还是 HTML。
@@ -725,10 +725,10 @@ items:
     异步加载所选项目上此外接程序的自定义属性。
 
 
-    自定义属性基于每个应用、每个项目存储为键/值对。此方法在回调中返回 CustomProperties，该回调提供访问特定于当前项目和当前外接程序的自定义属性的方法。自定义属性未在项目上加密，因此这不应用作安全存储。
+    自定义属性基于每个应用、每个项目存储为键/值对。 此方法在回调中返回一个 CustomProperties 对象, 该对象提供用于访问特定于当前项目和当前加载项的自定义属性的方法。 自定义属性未在项目上加密，因此这不应用作安全存储。
 
 
-    自定义属性作为 asyncResult.value 属性中的 CustomProperties 对象提供。此对象可用于获取、设置以及从项目中删除自定义属性，并将自定义属性集的更改重新保存到服务器。
+    自定义属性作为 asyncResult 属性中的 CustomProperties 对象提供。 此对象可用于获取、设置以及从项目中删除自定义属性，并将自定义属性集的更改重新保存到服务器。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -758,7 +758,7 @@ items:
     将附件从邮件或约会中删除。
 
 
-    removeAttachmentAsync 方法从项中删除具有指定标识符的附件。 最佳做法是，仅当同一个邮件应用程序在同一会话中添加了一个附件时，你才应使用该附件标识符来删除该附件。 在 Outlook Web App 和适用于设备的 OWA 中，附件标识符只在同一个会话中才有效。 当用户关闭应用，或者如果用户开始在内嵌窗体中撰写，则随后弹出的窗体中继续在单独的窗口撰写时，会话即结束。
+    removeAttachmentAsync 方法从项中删除具有指定标识符的附件。 最佳做法是，仅当同一个邮件应用程序在同一会话中添加了一个附件时，你才应使用该附件标识符来删除该附件。 在 Outlook Web App 和适用于设备的 OWA 中，附件标识符只在同一个会话中才有效。 当用户关闭应用程序时, 或者如果用户开始撰写内嵌窗体, 随后弹出窗体以继续在单独的窗口中。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -811,7 +811,7 @@ items:
     将附件从邮件或约会中删除。
 
 
-    removeAttachmentAsync 方法从项中删除具有指定标识符的附件。 最佳做法是，仅当同一个邮件应用程序在同一会话中添加了一个附件时，你才应使用该附件标识符来删除该附件。 在 Outlook Web App 和适用于设备的 OWA 中，附件标识符只在同一个会话中才有效。 当用户关闭应用，或者如果用户开始在内嵌窗体中撰写，则随后弹出的窗体中继续在单独的窗口撰写时，会话即结束。
+    removeAttachmentAsync 方法从项中删除具有指定标识符的附件。 最佳做法是，仅当同一个邮件应用程序在同一会话中添加了一个附件时，你才应使用该附件标识符来删除该附件。 在 Outlook Web App 和适用于设备的 OWA 中，附件标识符只在同一个会话中才有效。 当用户关闭应用程序时, 或者如果用户开始撰写内嵌窗体, 随后弹出窗体以继续在单独的窗口中。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -852,7 +852,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'removeHandlerAsync(eventType: Office.EventType, options?: any, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
+    content: 'removeHandlerAsync(eventType: Office.EventType, options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
@@ -865,7 +865,7 @@ items:
     - id: options
       description: '可选。 包含一个或多个以下属性的对象文本。 asyncContext: 开发人员可以在回调方法中提供要访问的任何对象。'
       type:
-      - any
+      - Office.AsyncContextOptions
     - id: callback
       description: 可选。 方法完成后, 使用单个参数 asyncResult 调用在 callback 参数中传递的函数, 该参数是一个作为一个 asyncresult 对象的参数。
       type:
@@ -1047,11 +1047,11 @@ items:
       description: ''
     parameters:
     - id: data
-      description: 要插入的数据。数据不得超过 1,000,000 个字符。如果传入的数据超过 1,000,000 个字符，则会引发 ArgumentOutOfRange 异常。
+      description: 要插入的数据。 数据不得超过 1,000,000 个字符。 如果传入了1000000个以上的字符, 则会引发 ArgumentOutOfRange 异常。
       type:
       - string
     - id: options
-      description: '可选。 包含一个或多个以下属性的对象文本。 asyncContext: 开发人员可以在回调方法中提供要访问的任何对象。 coercionType: 如果为文本, 则在 outlook Web App 和 outlook 中应用当前样式。 如果该字段是 HTML 编辑器，则仅插入文本数据，即使数据为 HTML。 如果 html 和字段支持 html (主题不), 则在 outlook Web App 中应用当前样式, 并在 outlook 中应用默认样式。 如果字段是文本字段, 则返回一个 InvalidDataFormat 错误。 如果未设置 coercionType，则结果取决于字段：如果该字段为 HTML，则使用 HTML；如果该字段为文本，则使用纯文本。'
+      description: '可选。 包含一个或多个以下属性的对象文本。 asyncContext: 开发人员可以在回调方法中提供要访问的任何对象。 coercionType: 如果为文本, 则在 outlook Web App 和 outlook 中应用当前样式。 如果该字段是 HTML 编辑器，则仅插入文本数据，即使数据为 HTML。 如果 html 和字段支持 html (主题不), 则在 outlook Web App 中应用当前样式, 并在 outlook 中应用默认样式。 如果字段是文本字段, 则返回一个 InvalidDataFormat 错误。 如果未设置 coercionType, 则结果取决于字段: 如果该字段为 html, 则使用 html;如果该字段为文本, 则使用纯文本。'
       type:
       - Office.AsyncContextOptions & CoercionTypeOptions
     - id: callback
@@ -1091,7 +1091,7 @@ items:
       description: ''
     parameters:
     - id: data
-      description: 要插入的数据。数据不得超过 1,000,000 个字符。如果传入的数据超过 1,000,000 个字符，则会引发 ArgumentOutOfRange 异常。
+      description: 要插入的数据。 数据不得超过 1,000,000 个字符。 如果传入了1000000个以上的字符, 则会引发 ArgumentOutOfRange 异常。
       type:
       - string
     - id: callback
@@ -1148,7 +1148,7 @@ items:
     end 属性是一个表示为协调世界时 (UTC) 日期和时间值的 "办公室" 的[Time](xref:outlook.Office.Time)对象。 您可以使用 convertToLocalClientTime 方法将 end 属性值转换为客户端的本地日期和时间。
 
 
-    使用 Time.setAsync 方法设置结束时间时，应使用 convertToUtcClientTime 方法将客户端的本地时间转换为服务器的 UTC。
+    使用 setAsync 方法设置结束时间时, 应使用 convertToUtcClientTime 方法将客户端上的本地时间转换为服务器的 UTC。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -1258,7 +1258,7 @@ items:
     获取实例表示的项的类型。
 
 
-    itemType 属性返回其中一个 ItemType 枚举值，指示 item 对象实例是邮件还是约会。
+    itemtype 属性返回一个 itemType 枚举值, 指示 item 对象实例是邮件还是约会。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -1289,7 +1289,7 @@ items:
       - MailboxEnums.ItemType
 - uid: outlook.Office.AppointmentCompose.location
   summary: >-
-    获取或设置约会的[地点](xref:outlook.Office.Location)。 location 属性返回一个 Location 对象，该对象提供用于获取和设置约会位置的方法。
+    获取或设置约会的[地点](xref:outlook.Office.Location)。 location 属性返回一个 location 对象, 该对象提供用于获取和设置约会位置的方法。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -1430,7 +1430,7 @@ items:
     获取或设置约会的定期模式。
 
 
-    如果项目是系列或系列中的实例, 则定期属性将返回定期约会或会议请求的定期对象。 针对单个约会和单个约会的会议请求返回 `null`。
+    如果项目是系列或系列中的实例, 则定期属性将返回定期约会或会议请求的定期对象。 `null`返回单个约会的单个约会和会议请求。
 
 
     **注意**: 会议请求的 itemClass 值为 IPM。Schedule. 会议请求。
@@ -1529,7 +1529,7 @@ items:
       - Recipients
 - uid: outlook.Office.AppointmentCompose.seriesId
   summary: >-
-    获取实例所属的系列的 ID。
+    获取实例所属的系列的 id。
 
 
     在 OWA 和 Outlook 中, webcasts&seriesid 返回此项所属的父 (系列) 项的 Exchange Web 服务 (EWS) ID。 但是, 在 iOS 和 Android 中, webcasts&seriesid 返回父项的 REST ID。
@@ -1561,7 +1561,7 @@ items:
     start 属性是一个表示为协调世界时 (UTC) 日期和时间值的 "办公室" 的[Time](xref:outlook.Office.Time)对象。 您可以使用 convertToLocalClientTime 方法将值转换为客户端的本地日期和时间。
 
 
-    使用 Time.setAsync 方法设置开始时间时，应使用 convertToUtcClientTime 方法将客户端的本地时间转换为服务器的 UTC。
+    当您使用 setAsync 方法来设置开始时间时, 应使用 convertToUtcClientTime 方法将客户端上的本地时间转换为服务器的 UTC。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -1609,10 +1609,10 @@ items:
     获取或设置显示在项目的主题字段中的说明。
 
 
-    subject 属性获取或设置由电子邮件服务器发送项目时的整个主题。
+    subject 属性获取或设置由电子邮件服务器发送的项目的整个主题。
 
 
-    subject 属性返回一个 Subject 对象，该对象提供用于获取和设置主题的方法。
+    subject 属性返回一个 subject 对象, 该对象提供用于获取和设置主题的方法。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
