--- a/docs/docs-ref-autogen/outlook/office.emailaddressdetails.yml
+++ b/docs/docs-ref-autogen/outlook/office.emailaddressdetails.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 719734ebbe98ae724d56061959afe48badf3f924
-ms.sourcegitcommit: b0b614f5315ab2e5c1e0ea51c687498f87684a07
+ms.openlocfilehash: edeec461fbb075ad2589459db09b33b2f09e448d
+ms.sourcegitcommit: 788ab9c595c9143f8b8f4822a170e8b90d72ee1d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/15/2019
-ms.locfileid: "30055859"
+ms.lasthandoff: 03/06/2019
+ms.locfileid: "30413803"
 items:
 - uid: outlook.Office.EmailAddressDetails
   summary: >-
@@ -25,7 +25,7 @@ items:
   - outlook.Office.EmailAddressDetails.emailAddress
   - outlook.Office.EmailAddressDetails.recipientType
 - uid: outlook.Office.EmailAddressDetails.appointmentResponse
-  summary: 获取参与者返回的约会响应。此属性仅适用于约会的参与者，由 optionalAttendees 或 requiredAttendees 属性表示。在其他方案中，此属性将返回 undefined。
+  summary: 获取参与者返回的约会响应。 此属性仅适用于约会的与会者, 由 optionalAttendees 或 requiredAttendees 属性表示。 在其他方案中, 此属性返回未定义。
   name: appointmentResponse
   fullName: appointmentResponse
   langs:
@@ -36,7 +36,7 @@ items:
     return:
       type:
       - MailboxEnums.ResponseType
-      description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nvar requiredAttendees = Office.context.mailbox.item.requiredAttendees;\nconsole.log(\"There are \" + requiredAttendees.length + \" required attendees.\")\nrequiredAttendees.forEach(function (requiredAttendee) {\n    console.log(\"Attendee \" + requiredAttendee.displayName + \": \" + requiredAttendee.appointmentResponse);\n});\n```"
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\n// The following sample provides the responses from required attendees.\n// Note that this sample needs the add-in to be in Appointment Read (Attendee) mode.\nvar requiredAttendees = Office.context.mailbox.item.requiredAttendees;\nconsole.log(\"There are \" + requiredAttendees.length + \" required attendees.\")\nrequiredAttendees.forEach(function (requiredAttendee) {\n    console.log(\"Attendee \" + requiredAttendee.displayName + \": \" + requiredAttendee.appointmentResponse);\n});\n```"
 - uid: outlook.Office.EmailAddressDetails.displayName
   summary: 获取与电子邮件地址关联的显示名称。
   name: displayName
