--- a/docs/docs-ref-autogen/outlook_1_6/office.emailaddressdetails.yml
+++ b/docs/docs-ref-autogen/outlook_1_6/office.emailaddressdetails.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 3de2e12d1736d76cb88529d7f6ea70851f71eb81
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 030770b452fe74f47a441a5e9d638ef3690b6d9c
+ms.sourcegitcommit: 788ab9c595c9143f8b8f4822a170e8b90d72ee1d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30095791"
+ms.lasthandoff: 03/06/2019
+ms.locfileid: "30413782"
 items:
 - uid: Outlook_1_6.Office.EmailAddressDetails
   summary: >-
@@ -25,7 +25,7 @@ items:
   - Outlook_1_6.Office.EmailAddressDetails.emailAddress
   - Outlook_1_6.Office.EmailAddressDetails.recipientType
 - uid: Outlook_1_6.Office.EmailAddressDetails.appointmentResponse
-  summary: 获取参与者返回的约会响应。此属性仅适用于约会的参与者，由 optionalAttendees 或 requiredAttendees 属性表示。在其他方案中，此属性将返回 undefined。
+  summary: 获取参与者返回的约会响应。 此属性仅适用于约会的与会者, 由 optionalAttendees 或 requiredAttendees 属性表示。 在其他方案中, 此属性返回未定义。
   name: appointmentResponse
   fullName: appointmentResponse
   langs:
@@ -36,7 +36,7 @@ items:
     return:
       type:
       - MailboxEnums.ResponseType
-      description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nvar requiredAttendees = Office.context.mailbox.item.requiredAttendees;\nconsole.log(\"There are \" + requiredAttendees.length + \" required attendees.\")\nrequiredAttendees.forEach(function (requiredAttendee) {\n    console.log(\"Attendee \" + requiredAttendee.displayName + \": \" + requiredAttendee.appointmentResponse);\n});\n```"
+      description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\n// The following sample provides the responses from required attendees.\n// Note that this sample needs the add-in to be in Appointment Read (Attendee) mode.\nvar requiredAttendees = Office.context.mailbox.item.requiredAttendees;\nconsole.log(\"There are \" + requiredAttendees.length + \" required attendees.\")\nrequiredAttendees.forEach(function (requiredAttendee) {\n    console.log(\"Attendee \" + requiredAttendee.displayName + \": \" + requiredAttendee.appointmentResponse);\n});\n```"
 - uid: Outlook_1_6.Office.EmailAddressDetails.displayName
   summary: 获取与电子邮件地址关联的显示名称。
   name: displayName
